<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mattchan.cs122b.MainActivity">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="99dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        android:visibility="visible"
        android:onClick="loginRequest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/login_to_moviejunkie"
        android:textColor="@color/title"
        android:textSize="@dimen/title_size"
        android:visibility="visible"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:text="@string/email"
        android:textColor="@color/header"
        android:textSize="@dimen/header_size"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="@+id/email" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="104dp"
        android:layout_height="27dp"
        android:text="@string/password"
        android:textColor="@color/header"
        android:textSize="@dimen/header_size"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="@+id/password" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/textColor"
        android:ems="10"
        android:hint="@string/chen_li"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/password"
        android:layout_width="212dp"
        android:layout_height="45dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/textColor"
        android:ems="10"
        android:hint="@string/_123abc"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


</android.support.constraint.ConstraintLayout>
